--- a/index.html
+++ b/index.html
@@ -8,12 +8,46 @@
 </head>
 <body>
     <div class="header">
-        <img src="./img/mean.webp" alt="Header logo. Red panda">
+        <div class="headertext">Teepat Productions</div>
         <ul>
             <li><a href=#>Our Games</a></li>
             <li><a href=#>The Crew</a></li>
             <li><a href=#>Red Panda FACTS!</a></li>
         </ul>
+    </div>
+    <div class="content">
+        <div class="section1">
+            <div class="thetexts">
+                <div class="BIGTEXT">This is teepat productions</div>
+                <div class="SMALLERTEXT">we make games and stuff</div>
+                <div class="textbutton1">
+                    <button>Join us</button>
+                </div>
+            </div>
+            <img src="./img/redpanda1.jpg" alt="cute red panda one">
+        </div>
+        <div class="section2">
+            <div class="infotext">My name Teepat</div>
+            <!-- maybe remove this container -->
+            <div class ="images"> 
+                <div class="info">
+                    <img src="./img/redpanda1.jpg" alt="cute red panda one">
+                    <div class="text">image 1</div>
+                </div>
+                <div class="info">
+                    <img src="./img/redpanda2.jpg" alt="cute red panda two">
+                    <div class="text">image 2</div>
+                </div>
+                <div class="info">
+                    <img src="./img/redpanda3.jpg" alt="cute red panda three">
+                    <div class="text">image 3</div>
+                </div>
+                <div class="info">
+                    <img src="./img/redpanda4.jpg" alt="cute red panda four">
+                    <div class="text">image 4</div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
