Complete first draft of index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="BIGTEXT">This is teepat productions</div>
                 <div class="SMALLERTEXT">we make games and stuff</div>
                 <div class="textbutton1">
-                    <button>Join us</button>
+                    <button class="blueybutton">Join us</button>
                 </div>
             </div>
             <img src="./img/redpanda1.jpg" alt="cute red panda one">
@@ -47,6 +47,22 @@
                     <div class="text">image 4</div>
                 </div>
             </div>
+        </div>
+        <div class="section3">
+            <div class="quote">here at teepat proedictons we like not making games
+                <div class="smallerquote">-teepat, master procrastinator</div>
+            </div>
+        </div>
+        <div class="section4">
+            <div class="signupzone">
+                <div class="actiontext">
+                    <div class="subactiontext"></div>
+                </div>
+                <button class="darkblueybutton"><a href=#>Join us</a></button>
+            </div>
+        </div>
+        <div class="Footer">
+            <div class="Copyright">teepat co inc 2025</div>
         </div>
     </div>
 </body>
