Prototype the css layout, image still not resizing properly

--- a/index.html
+++ b/index.html
@@ -24,26 +24,32 @@
                     <button class="blueybutton">Join us</button>
                 </div>
             </div>
-            <img src="./img/redpanda1.jpg" alt="cute red panda one">
+            <div class="thumbnail">
+                <img src="./img/redpanda1.jpg" alt="cute red panda one">
+            </div>
         </div>
         <div class="section2">
             <div class="infotext">My name Teepat</div>
             <!-- maybe remove this container -->
             <div class ="images"> 
                 <div class="info">
-                    <img src="./img/redpanda1.jpg" alt="cute red panda one">
+                    <img class="bingo"
+                     src="./img/redpanda1.jpg" alt="cute red panda one">
                     <div class="text">image 1</div>
                 </div>
                 <div class="info">
-                    <img src="./img/redpanda2.jpg" alt="cute red panda two">
+                    <img class="bingo"
+                     src="./img/redpanda2.jpg" alt="cute red panda two">
                     <div class="text">image 2</div>
                 </div>
                 <div class="info">
-                    <img src="./img/redpanda3.jpg" alt="cute red panda three">
+                    <img class="bingo"
+                     src="./img/redpanda3.jpg" alt="cute red panda three">
                     <div class="text">image 3</div>
                 </div>
                 <div class="info">
-                    <img src="./img/redpanda4.jpg" alt="cute red panda four">
+                    <img class="bingo"
+                     src="./img/redpanda4.jpg" alt="cute red panda four">
                     <div class="text">image 4</div>
                 </div>
             </div>
@@ -56,13 +62,14 @@
         <div class="section4">
             <div class="signupzone">
                 <div class="actiontext">
-                    <div class="subactiontext"></div>
+                    JOIN US NOW or else
+                    <div class="subactiontext">pls join pls pls</div>
                 </div>
                 <button class="darkblueybutton"><a href=#>Join us</a></button>
             </div>
         </div>
-        <div class="Footer">
-            <div class="Copyright">teepat co inc 2025</div>
+        <div class="footer">
+            <div class="copyright">teepat co inc 2025</div>
         </div>
     </div>
 </body>
