Updated css and index.html

--- a/index.html
+++ b/index.html
@@ -24,9 +24,7 @@
                     <button class="blueybutton">Join us</button>
                 </div>
             </div>
-            <div class="thumbnail">
-                <img src="./img/redpanda1.jpg" alt="cute red panda one">
-            </div>
+            <img class ="thumbnail" src="./img/redpanda1.jpg" alt="cute red panda one">
         </div>
         <div class="section2">
             <div class="infotext">My name Teepat</div>
@@ -35,22 +33,22 @@
                 <div class="info">
                     <img class="bingo"
                      src="./img/redpanda1.jpg" alt="cute red panda one">
-                    <div class="text">image 1</div>
+                    <div class="text">stupid red panda</div>
                 </div>
                 <div class="info">
                     <img class="bingo"
                      src="./img/redpanda2.jpg" alt="cute red panda two">
-                    <div class="text">image 2</div>
+                    <div class="text">quite curious panda red</div>
                 </div>
                 <div class="info">
                     <img class="bingo"
                      src="./img/redpanda3.jpg" alt="cute red panda three">
-                    <div class="text">image 3</div>
+                    <div class="text">slothful crimson panda</div>
                 </div>
                 <div class="info">
                     <img class="bingo"
                      src="./img/redpanda4.jpg" alt="cute red panda four">
-                    <div class="text">image 4</div>
+                    <div class="text">wary ailurus fulgens</div>
                 </div>
             </div>
         </div>
