Restructure CSS and HTML code

--- a/index.html
+++ b/index.html
@@ -8,25 +8,29 @@
 </head>
 <body>
     <div class="header">
-        <div class="headertext">Teepat Productions</div>
+        <h1><div class="headertext">Teepat Productions</div></h1>
         <ul>
-            <li><a href=#>Our Games</a></li>
-            <li><a href=#>The Crew</a></li>
-            <li><a href=#>Red Panda FACTS!</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Our Games</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">The Crew</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Red Panda FACTS!</a></li>
         </ul>
     </div>
-    <div class="content">
-        <div class="section1">
+        <div class="hamburger" id="hamburger">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+    </div>    
+    <section class="hero">
             <div class="thetexts">
-                <div class="BIGTEXT">This is teepat productions</div>
-                <div class="SMALLERTEXT">we make games and stuff</div>
-                <div class="textbutton1">
-                    <button class="blueybutton">Join us</button>
-                </div>
+                <h1><span class="BIGTEXT">This is teepat productions</span></h1>
+                <h3><span class="SMALLERTEXT">we make games and stuff</span></h3>
+                <a class="btn" href="#">Join Us</a>
             </div>
-            <img class ="thumbnail" src="./img/redpanda1.jpg" alt="cute red panda one">
-        </div>
-        <div class="section2">
+            <div class ="thumbnail">
+                <img width="300" height="300" src="./img/redpanda1.jpg" alt="cute red panda one">
+            </div>
+    </section>    
+    <div class="section2">
             <div class="infotext">My name Teepat</div>
             <!-- maybe remove this container -->
             <div class ="images"> 
@@ -51,13 +55,13 @@
                     <div class="text">wary ailurus fulgens</div>
                 </div>
             </div>
-        </div>
-        <div class="section3">
+    </div>
+    <div class="section3">
             <div class="quote">here at teepat proedictons we like not making games
                 <div class="smallerquote">-teepat, master procrastinator</div>
             </div>
-        </div>
-        <div class="section4">
+    </div>
+    <div class="section4">
             <div class="signupzone">
                 <div class="actiontext">
                     JOIN US NOW or else
@@ -65,7 +69,6 @@
                 </div>
                 <button class="darkblueybutton"><a href=#>Join us</a></button>
             </div>
-        </div>
     </div>
     <div class="footer">
         <div class="copyright">teepat co inc 2025</div>
