Finish website, Fix image going out of container

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Teepat Productions</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -26,11 +26,9 @@
                 <h3><span class="SMALLERTEXT">we make games and stuff</span></h3>
                 <a class="btn" href="#">Join Us</a>
             </div>
-            <div class ="thumbnail">
-                <img width="300" height="300" src="./img/redpanda1.jpg" alt="cute red panda one">
-            </div>
+            <img class="thumbnail" src="./img/redpanda1.jpg" alt="cute red panda one">
     </section>    
-    <div class="section2">
+    <section class="section2">
             <div class="infotext">My name Teepat</div>
             <!-- maybe remove this container -->
             <div class ="images"> 
@@ -55,23 +53,23 @@
                     <div class="text">wary ailurus fulgens</div>
                 </div>
             </div>
-    </div>
-    <div class="section3">
+    </section>
+    <section class="section3">
             <div class="quote">here at teepat proedictons we like not making games
                 <div class="smallerquote">-teepat, master procrastinator</div>
             </div>
-    </div>
-    <div class="section4">
+    </section>
+    <section class="section4">
             <div class="signupzone">
                 <div class="actiontext">
                     JOIN US NOW or else
-                    <div class="subactiontext">pls join pls pls</div>
+                    <div class="subactiontext">we have tons of benefits like uhhh</div>
                 </div>
                 <button class="darkblueybutton"><a href=#>Join us</a></button>
             </div>
-    </div>
-    <div class="footer">
+    </section>
+    <section class="footer">
         <div class="copyright">teepat co inc 2025</div>
-    </div>
+    </section>
 </body>
 </html>
